--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.0",
     "nodemon": "^1.19.2",
+    "uuid": "^3.3.3",
     "pg": "^7.12.1",
     "ws": "^7.1.2"
   },
